# llm-guard-kit

./: .gitignore  Dockerfile  README.md  SECURITY.md  blog_post_v017.md  docker-compose.yml  pyproject.toml
.github/workflows/: collect_labels.yml  security.yml
app/: auth_utils.py  database.py  frontend.py  main.py  manager.py  models.py  run.py
app/routers/: admin.py  auth.py  billing.py  demo.py  proxy.py  user.py
docs/: PRODUCT_SPEC.md  farl_paper.tex  integrated_architecture.md  label_free_monitoring_paper.md  llm_guard_kit_architecture.tex  llm_infrastructure_paper.md  production_integration.md  qara_paper.md  research_paper.md  scope_limitations.md  user_guide.md
docs/plans/: 2026-03-12-v0.14-reliability-generalization.md
docs/superpowers/plans/: 2026-03-12-production-readiness.md
examples/: basic_clustering.py  blindness_detection.py  energy_landscape.py  trust_verification.py
llm_guard/: __init__.py  adapter_registry.py  adaptive_cisc.py  agent_guard.py  client.py  deep_verifier.py  drift_detector.py  local_verifier.py  mini_judge.py  nano.py  process_monitor.py  query_rewriter.py  quick_calibration.py  router.py  step_extractor.py  step_normalizer.py  telemetry.py  trust_object.py  white_box_probe.py
llm_guard/integrations/: __init__.py  crewai.py  datadog_integration.py  langchain.py  langfuse_integration.py  langsmith_integration.py  llamaindex.py  prometheus_integration.py
notebooks/: farl_healer_lora.ipynb  white_box_minijudge_musique.ipynb
results/exp159_hybrid_mini_judge/: hybrid_mini_judge.pkl
results/exp_paper_baselines/: all_domain_scores.json  paper_experiments_1_2_3.json
scripts/: demo_v017.py  farl_ablation.py  farl_hunt.py  farl_phase2.py  program_farl.md  program_farl_phase2.md  retrain_mini_judge.py  retrain_mini_judge_from_taxonomy.py  smoke_test_v017.py
tests/: bench_guard.py  coverage_matrix.py  test_a2a_security.py  test_agent_guard.py  test_answer_features.py  test_calibration_endpoint.py  test_claims_validation.py  test_complete_use_cases.py  test_confident_wrong.py  test_cross_dataset.py  test_cross_framework.py  test_domain_threshold.py  test_exp142_smoke.py  test_farl_phase2.py  test_guard.py  test_latency.py  test_lstm_features.py  test_process_monitor.py  test_step_extractor.py  test_v030.py
